Signed-off-by: KahlZhang <473930123@qq.com>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <title>CDU_Critical_Thinking</title>
   <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
-
 <body>
-
 <!--header contain logo and search bar-->
 <header>
     <div class="widthsize">
@@ -15,56 +13,49 @@
       <input type="text" placeholder="Search ..." class="searchbar">
     </div>
 </header>
-
 <!--header section end-->
-
 <!-- main navigation section-->
 <section>
-  <div class="widthsize">
-      <nav>
-        <ul class="main-nav">
-          <li>
-            <img src="home.png" class="logo-mini">
-            <a href="https://www.cdu.edu.au/">CDU HOME</a>
-          </li>
-          <li>
-            <img src="library.png" class="logo-mini">
-            <a href="https://www.cdu.edu.au/library/">LIBRARY</a>
-          </li>
-          <li>
-            <img src="person.png" class="logo-mini">
-            <a href="https://www.cdu.edu.au/current-students">CURRENT STUDENTS</a>
-          </li>
-          <li>
-            <img src="key.png" class="last-mini-logo">
-            <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
-          </li>
-        </ul>
-      </nav>
-
-<!-- main navigation section-->
-
-<!--isidebar section-->
-
-      <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicassignments.html">Academic Assignments</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicwriting.html">Academic Writing</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introcriticalthinking.html">Critical Thinking</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreferencing.html">Referencing</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introexams.html">Exams</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introlecturestutorials.html">Lectures and Tutorials</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intronotemaking.html">Note Making</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreadingresearch.html">Research and Reading</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intromanagingstudies.html">Managing Your Studies</a>
-        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/videoresources.html">Videos and Interactives</a>
+    <div class="widthsize">
+        <nav>
+          <ul class="main-nav js--main-nav">
+            <li>
+              <img src="home.png" alt="CDU_Home" class="logo-mini">
+              <a href="https://www.cdu.edu.au/">CDU HOME</a>
+            </li>
+            <li>
+              <img src="library.png" alt="Library" class="logo-mini">
+              <a href="https://www.cdu.edu.au/library/">LIBRARY</a>
+            </li>
+            <li>
+              <img src="person.png" alt="Current Students" class="logo-mini">
+              <a href="https://www.cdu.edu.au/current-students">CURRENT STUDENTS</a>
+            </li>
+            <li>
+              <img src="key.png" alt="Learnline" class="last-mini-logo">
+              <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
+            </li>
+          </ul>
+        </nav>
+  <!-- main navigation section-->
+  <!--isidebar section-->
+        <div id="mySidebar" class="sidebar">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicassignments.html">Academic Assignments</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicwriting.html">Academic Writing</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introcriticalthinking.html">Critical Thinking</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreferencing.html">Referencing</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introexams.html">Exams</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introlecturestutorials.html">Lectures and Tutorials</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intronotemaking.html">Note Making</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreadingresearch.html">Research and Reading</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intromanagingstudies.html">Managing Your Studies</a>
+          <a href="http://learnline.cdu.edu.au/studyskills/studyskills/videoresources.html">Videos and Interactives</a>
+        </div>
+        <div id="main">
+          <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
+        </div>
       </div>
-
-      <div id="main">
-        <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
-      </div>
-
-    </div>
 </section>
 <!--isidebar section end-->
 
@@ -87,11 +78,8 @@
       </p>
     </div>
   </section>
-
   <!--Introduction nad parpgraph section end-->
-
   <!-- all the card contents-->
-
 <section>
   <div class="container">
     <div class="card-wrapper">
