Added the links for href on for the top main navigation
Signed-off-by: YousufD2 <48338941+YousufD2@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
       <ul class="main-nav js--main-nav">
         <li>
           <img src="home.png" alt="CDU_Home" class="logo-mini">
-          <a href="https://ionicons.com">CDU HOME</a>
+          <a href="https://www.cdu.edu.au/">CDU HOME</a>
         </li>
         <li>
           <img src="library.png" alt="Libarary" class="logo-mini">
-          <a href="https://ionicons.com">LIBRARY</a>
+          <a href="https://www.cdu.edu.au/library/">LIBRARY</a>
         </li>
         <li>
           <img src="person.png" alt="Current Students" class="logo-mini">
-          <a href="https://ionicons.com">Current Students</a>
+          <a href="https://www.cdu.edu.au/current-students/my-cdu">Current Students</a>
         </li>
         <li>
           <img src="key.png" alt="Learnline" class="last-mini-logo">
-          <a href="https://ionicons.com">Learnline Login</a>
+          <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
         </li>
       </ul>
       <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
