--- a/index.html
+++ b/index.html
@@ -87,17 +87,22 @@
   <div class="container">
     <div class="card-wrapper">
       <div class="card">
-        <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
+        <div class="subheading">
         <h3>Critical thinking is a tool for decision making</h3>
-        <p class="container">
+      </div>
+        <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
+        <p class="container-p">
           Weighing up alternatives in order to make decisions is part of the critical thinking process.
         </p>
+        <div class="button-style">
+          <a class="button">learn more</a>
+        </div>
       </div>
 
       <div class="card">
         <img src="2.jpg" alt="photo2" class="card-img" style="width:100%">
         <h3>What does critical thinking involve</h3>
-        <p class="container">
+        <p class="container-p">
           Critical thinking involves active involvement.
         </p>
       </div>
@@ -105,7 +110,7 @@
       <div class="card">
         <img src="3.png" alt="photo3" class="card-img" style="width:100%">
         <h3>Reading Critical</h3>
-        <p class="container">
+        <p class="container-p">
           One of the key strategies you can use when reading critically is to ask yourself a series of questions.
         </p>
       </div>
@@ -113,7 +118,7 @@
       <div class="card">
         <img src="4.png" alt="photo3" class="card-img" style="width:100%">
         <h3>Definition</h3>
-        <p class="container">
+        <p class="container-p">
           Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do (p.xvii).
         </p>
       </div>
@@ -129,7 +134,7 @@
       <div class="card">
         <img src="6.jpg" alt="photo3" class="card-img" style="width:100%">
         <h3>Tutorial and semanier presentation</h3>
-        <p class="container">
+        <p class="container-p">
           Before giving a presentation it is vital to consider your purpose.
         </p>
       </div>
