Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@
         <h3>Critical thinking is a tool for decision making</h3>
       </div>
         <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
-        <p class="container-p">
-          Weighing up alternatives in order to make decisions is part of the critical thinking process.
+        <div class="container-p">
+        <p>
+          Weighing up alternatives in order to make decisions is part of the critical thinking process.<br>
+          - good<br>
+          - good
         </p>
+      </div>
         <div class="button-style">
           <a class="button">learn more</a>
         </div>
