--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
         <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
         <div class="container-p">
         <p>
-          Weighing up alternatives in order to make decisions is part of the critical thinking process.<br>
-          - good<br>
-          - good
+          Weighing up alternatives in order to make decisions is part of the critical thinking process.
         </p>
       </div>
         <div class="button-style">
@@ -104,43 +102,78 @@
       </div>
 
       <div class="card">
-        <img src="2.jpg" alt="photo2" class="card-img" style="width:100%">
+        <div class="subheading">
         <h3>What does critical thinking involve</h3>
-        <p class="container-p">
-          Critical thinking involves active involvement.
+      </div>
+        <img src="2.jpg" alt="photo2" class="card-img" style="width:100%">
+        <div class="container-p">
+        <p>
+          Critical thinking involves active involvement.You are not passively accepting everything that you read or hear but are questioning
         </p>
+      </div>
+        <div class="button-style">
+          <a class="button">learn more</a>
+        </div>
       </div>
 
       <div class="card">
-        <img src="3.png" alt="photo3" class="card-img" style="width:100%">
+        <div class="subheading-2">
         <h3>Reading Critical</h3>
-        <p class="container-p">
+      </div>
+        <img src="3.png" alt="photo3" class="card-img" style="width:100%">
+        <div class="container-p">
+        <p >
           One of the key strategies you can use when reading critically is to ask yourself a series of questions.
         </p>
       </div>
+        <div class="button-style">
+          <a class="button">learn more</a>
+        </div>
+      </div>
 
       <div class="card">
-        <img src="4.png" alt="photo3" class="card-img" style="width:100%">
+        <div class="subheading-2">
         <h3>Definition</h3>
-        <p class="container-p">
+      </div>
+        <img src="4.png" alt="photo3" class="card-img" style="width:100%">
+        <div class="container-p">
+        <p >
           Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do (p.xvii).
         </p>
       </div>
-
-      <div class="card">
-        <img src="5.png" alt="photo3" class="card-img" style="width:100%">
-        <h3>For academic writing</h3>
-        <p class="container">
-          When writing at university, your aim is to convince the reader by using critical thinking to promote your argument.
-        </p>
+        <div class="button-style">
+          <a class="button">learn more</a>
+        </div>
       </div>
 
       <div class="card">
-        <img src="6.jpg" alt="photo3" class="card-img" style="width:100%">
+        <div class="subheading-2">
+        <h3>For academic writing</h3>
+      </div>
+        <img src="5.png" alt="photo3" class="card-img" style="width:100%">
+        <div class="container-p">
+        <p>
+          When writing at university, your aim is to convince the reader by using critical thinking to promote your argument.
+        </p>
+      </div>
+        <div class="button-style">
+          <a class="button">learn more</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="subheading">
         <h3>Tutorial and semanier presentation</h3>
-        <p class="container-p">
+      </div>
+        <img src="6.jpg" alt="photo3" class="card-img" style="width:100%">
+        <div class="container-p">
+        <p>
           Before giving a presentation it is vital to consider your purpose.
         </p>
+      </div>
+        <div class="button-style">
+          <a class="button">learn more</a>
+        </div>
       </div>
     </div>
   </div>
