Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/index.html
+++ b/index.html
@@ -61,20 +61,16 @@
 </section>
 <section class="section-style js--section-style">
   <div class="widthsize">
-    <h2>Introduction to critical thinking</h2>
-    <p class="long-copy">
-      One of the most important aspects of academic work is the ability to think critically about what you read, what you write and what you are told. Rather than accept all information as truth, you need to test the validity of others’ standpoints in order to arrive at your own point of view.
-    </p>
+    <h2>Critical thinking</h2>
 
-    <p class="long-copy">
 
+    <div class="long-copy">
+
+    <h5>Introduction</h5>  
+    <p>
       When you think critically, you are being active; you are not passively accepting everything you read and hear, but questioning, evaluating, making judgements, finding connections and categorising. Critical thinking is necessary in order to form judgements in lectures and tutorials; when reading and when writing assignments.
 
       You will find information on how to apply critical thinking to your tasks at university in this section.
-    </p>
-    <p class="long-copy">
-
-      If you would like further information, please contact staff from the Academic Language and Learning Success Program (ALLSP), who run free workshops for internal and external students on all academic skills.
     </p>
   </div>
 </section>
@@ -138,7 +134,7 @@
         <img src="4.png" alt="photo3" class="card-img" style="width:100%">
         <div class="container-p">
         <p >
-          Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do (p.xvii).
+          Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do.
         </p>
       </div>
         <div class="button-style">
