Signed-off-by: KahlZhang <473930123@qq.com>

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <nav>
       <ul class="main-nav js--main-nav">
         <li>
-          <a href="https://www.cdu.edu.au/">CDU HOME</a>
+          <a href="https://www.cdu.edu.au/">CDU Home</a>
         </li>
         <li>
-          <a href="https://www.cdu.edu.au/library/">LIBRARY</a>
+          <a href="https://www.cdu.edu.au/library/">Library</a>
         </li>
         <li>
           <a href="https://www.cdu.edu.au/current-students/my-cdu">Current Students</a>
@@ -97,7 +97,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">learn more</a>
+          <a class="button">Learn More</a>
         </div>
       </div>
 
@@ -112,7 +112,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">learn more</a>
+          <a class="button">Learn More</a>
         </div>
       </div>
 
@@ -127,7 +127,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">learn more</a>
+          <a class="button">Learn More</a>
         </div>
       </div>
 
@@ -142,7 +142,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">learn more</a>
+          <a class="button">Learn More</a>
         </div>
       </div>
 
@@ -157,7 +157,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">learn more</a>
+          <a class="button">Learn More</a>
         </div>
       </div>
 
@@ -172,7 +172,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">learn more</a>
+          <a class="button">Learn More</a>
         </div>
       </div>
     </div>
@@ -185,7 +185,7 @@
     <div >
       <ul  class="social-links">
         <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twiiter.png" class="logo-mini"></a></li>
+        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini"></a></li>
         <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini"></a></li>
       </ul>
 
