Signed-off-by: KahlZhang <473930123@qq.com>

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CDU_Critical_Thinking</title>
+  <title>Critical Thinking</title>
   <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
@@ -184,9 +184,9 @@
   <div class="widthsize">
     <div >
       <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini"></a></li>
+        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="Facebook.png" class="logo-mini"></a></li>
+        <li><a href="https://twitter.com/cduni?lang=en"> <img src="Twitter.png" class="logo-mini"></a></li>
+        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="Instagram.png" class="logo-mini"></a></li>
       </ul>
 
     </div>
