--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -59,24 +59,25 @@
   <div class="widthsize">
     <h2>Critical thinking</h2>
 
-   <div class="container">
-   <div class="card-wrapper">
-     <div class="intro-card">
-    <div class="long-copy">
+    <div class="container">
+      <div class="card-wrapper">
+        <div class="card">
+          <div class="subheading">
+          <h3>Introduction</h3>
+        </div>
+            <img class="image-logo" src="1024px-Critical_Thinking_Skills_Diagram.svg.png" alt="crtical thinking explain">
+          <div class="container-p">
+          <p>
+             Critical thinking is necessary and benetfit for students.
+          </p>
+        </div>
+          <div class="button-style">
+            <a class="button">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <h5>Introduction</h5>
-    <p>
-      When you think critically, you are being active; you are not passively accepting everything you read and hear, but questioning, evaluating, making judgements, finding connections and categorising. Critical thinking is necessary in order to form judgements in lectures and tutorials; when reading and when writing assignments.
-
-      You will find information on how to apply critical thinking to your tasks at university in this section.
-    </p>
-  </div>
-</div>
-<div class="intro-card">
-  <img class="image-logo" src="1024px-Critical_Thinking_Skills_Diagram.svg.png" alt="crtical thinking explain">
-</div>
-</div>
-</div>
 </section>
 
 <!--Introduction nad parpgraph section end-->
