Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -77,23 +77,6 @@
         </div>
       </div>
     </div>
-
-    <div class="card">
-      <div class="subheading-2">
-        <h3>Definition</h3>
-      </div>
-      <img src="4.png" alt="photo3" class="card-img" style="width:100%">
-      <div class="container-p">
-        <p >
-          Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do.
-        </p>
-      </div>
-      <div class="button-style">
-        <a class="button">Learn More</a>
-      </div>
-    </div>
-
-
 </section>
 
 <!--Introduction nad parpgraph section end-->
@@ -103,6 +86,20 @@
 <section>
   <div class="container">
     <div class="card-wrapper">
+      <div class="card">
+        <div class="subheading-2">
+          <h3>Definition</h3>
+        </div>
+        <img src="4.png" alt="photo3" class="card-img" style="width:100%">
+        <div class="container-p">
+          <p >
+            Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do.
+          </p>
+        </div>
+        <div class="button-style">
+          <a class="button">Learn More</a>
+        </div>
+      </div>
       <div class="card">
         <div class="subheading">
         <h3>Critical thinking is a tool for decision making</h3>
@@ -132,7 +129,11 @@
           <a class="button">Learn More</a>
         </div>
       </div>
+    </div>
+  </div>
 
+  <div class="container">
+    <div class="card-wrapper">
       <div class="card">
         <div class="subheading-2">
         <h3>Reading Critical</h3>
