academic writing subpage
Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -161,7 +161,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">Learn More</a>
+          <a class="button" href="academicwriting.html">Learn More</a>
         </div>
       </div>
 
