Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/Homepage/academicwriting.html
+++ b/Homepage/academicwriting.html
@@ -55,13 +55,13 @@
 </section>
 <section class="section-style js--section-style">
   <div class="widthsize">
-    <h2>Critical thinking is a tool for decision making</h2>
+    <h2>Critical thinking for academic writing</h2>
 
     <div class="container">
       <div class="card-wrapper">
         <div class="card">
           <div class="subheading">
-          <h3>Critical thinking is a tool for decision making</h3>
+          <h3>For academic writing</h3>
         </div>
           <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
