Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -145,7 +145,7 @@
         </p>
       </div>
         <div class="button-style">
-          <a class="button">Learn More</a>
+          <a class="button">Questions</a>
         </div>
       </div>
 
