Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/Homepage/ReadingCritical.html
+++ b/Homepage/ReadingCritical.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Critical Thinking</title>
-  <link rel="stylesheet" href="main.css" type="text/css">
+  <link rel="stylesheet" href="academic.css" type="text/css">
 </head>
 <body>
 <header>
@@ -52,28 +52,23 @@
     <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
   </div>
 
-  </div>
-</section>
 </section>
 <section class="section-style js--section-style">
   <div class="widthsize">
-    <h2>Critical thinking</h2>
+    <h2>Reading Critically</h2>
 
     <div class="container">
       <div class="card-wrapper">
         <div class="card">
           <div class="subheading">
-          <h3>Introduction</h3>
+          <h3>What is Reading Critically</h3>
         </div>
-            <img class="image-logo" src="1024px-Critical_Thinking_Skills_Diagram.svg.png" alt="crtical thinking explain">
+          <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
           <p>
-             Critical thinking is necessary and benetfit for students.
-          </p>
-        </div>
-          <div class="button-style">
-            <a class="button">Learn More</a>
-          </div>
+          One of the key strategies you can use when reading critically is to ask yourself a series of questions.Begin by asking questions which relate to the text overall and then look at the author’s argument and the evidence used to support it.
+          <p>
+
         </div>
       </div>
     </div>
@@ -88,99 +83,105 @@
     <div class="card-wrapper">
       <div class="card">
         <div class="subheading-2">
-          <h3>Definition</h3>
+          <h3>For examine the overall creditability of the text</h3>
         </div>
-        <img src="4.png" alt="photo3" class="card-img" style="width:100%">
+        <div class="QQ">1. Who is the author and when was this written?
+        </div>
+        <div class="QQ">2. What is the author’s approach and perspective?
+        </div>
+        <div class="QQ">3. On first reading, does this seem a credible argument? Why?
+          </div>
+          <div class="QQ">
+            4. What are the main points of this text?
+            </div>
+
         <div class="container-p">
-          <p >
-            Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do.
+          <p>
+          5.What is the author saying? (Try to sum up the argument in your own words)
           </p>
         </div>
         <div class="button-style">
-          <a class="button">Learn More</a>
+          <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
       <div class="card">
-        <div class="subheading">
-        <h3>Critical thinking is a tool for decision making</h3>
-      </div>
-        <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
+        <div class="subheading-2">
+          <h3>Analysis the style and the tone of argument
+        </div>
+        <div class="QQ">1.Is the argument clearly expressed?
+        </div>
+        <div class="QQ">2. Does the author use emotive terms or examples to persuade the reader?
+        </div>
+        <div class="QQ">3. What assumptions does the author make?
+          </div>
+          <div class="QQ">
+            4. Do these strategies enhance or detract from the argument?
+            </div>
+
         <div class="container-p">
-        <p>
-          Weighing up alternatives in order to make decisions is part of the critical thinking process.
-        </p>
-      </div>
+          <p>
+          5. Does the writer’s language, tone or choice of examples reveal any biases? If so do these biases reduce the credibility of the argument?
+          </p>
+        </div>
         <div class="button-style">
-          <a class="button">Learn More</a>
+          <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
 
-      <div class="card">
-        <div class="subheading">
-        <h3>What does critical thinking involve</h3>
-      </div>
-        <img src="2.jpg" alt="photo2" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p>
-          Critical thinking involves active involvement.You are not passively accepting everything that you read or hear but are questioning
-        </p>
-      </div>
-        <div class="button-style">
-          <a class="button">Learn More</a>
-        </div>
-      </div>
     </div>
   </div>
-
   <div class="container">
     <div class="card-wrapper">
       <div class="card">
         <div class="subheading-2">
-        <h3>Reading Critical</h3>
-      </div>
-        <img src="3.png" alt="photo3" class="card-img" style="width:100%">
+          <h3>For examine the argument and evidence</h3>
+        </div>
+        <div class="QQ">1. What is the quality of the evidence?(Is the evidence anecdotal or supported by research and/or scientific study?)
+        </div>
+        <div class="QQ">2. Is the evidence recent and relevant?
+        </div>
+        <div class="QQ">3. Which parts of the argument do I agree with and why?
+          </div>
+          <div class="QQ">
+            4. Is there a logical development of ideas?
+            </div>
+
         <div class="container-p">
-        <p >
-          One of the key strategies you can use when reading critically is to ask yourself a series of questions.
-        </p>
-      </div>
+          <p>
+          5. What is the quality of the evidence?(Is the evidence anecdotal or supported by research?)
+          </p>
+        </div>
         <div class="button-style">
-          <a class="button" href="ReadingCritical.html">Questions</a>
+          <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
-
-
       <div class="card">
         <div class="subheading-2">
-        <h3>For academic writing</h3>
-      </div>
-        <img src="5.png" alt="photo3" class="card-img" style="width:100%">
+          <h3>For Overall assessment of the writing</h3>
+        </div>
+        <div class="QQ">1. What were the strengths of the argument?
+        </div>
+        <div class="QQ">2. Does the writing challenge your own biases, assumptions and beliefs?
+        </div>
+        <div class="QQ">3. What were the weaknesses of the argument?
+          </div>
+          <div class="QQ">
+            4. What connections do you see between this text and other texts?
+            </div>
+
         <div class="container-p">
-        <p>
-          When writing at university, your aim is to convince the reader by using critical thinking to promote your argument.
-        </p>
-      </div>
+          <p>
+          5. Are you capable of reviewing your beliefs/assumptions in the light of the argument presented?
+          </p>
+        </div>
         <div class="button-style">
-          <a class="button" href="academicwriting.html">Learn More</a>
+          <a class="button" href="index.html">Back Home</a>
         </div>
       </div>
 
-      <div class="card">
-        <div class="subheading">
-        <h3>Tutorial and semanier presentation</h3>
-      </div>
-        <img src="6.jpg" alt="photo3" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p>
-          Before giving a presentation it is vital to consider your purpose.
-        </p>
-      </div>
-        <div class="button-style">
-          <a class="button">Learn More</a>
-        </div>
-      </div>
     </div>
   </div>
+
 </section>
 
 
